Fix: AudioCD playback with xine-engine would stutter and freeze Amarok.

The problem was that Engine::metaDataForUrl() was called repeatedly (3 times) in CollectionDB::bundleForUrl(), while playback was already started. This blocked xine.

BUG: 133015

svn path=/trunk/extragear/multimedia/amarok/; revision=578458